[gd_scene load_steps=5 format=3 uid="uid://33vqd60q8kb2"]

[ext_resource type="Texture2D" uid="uid://bx820wv0hunln" path="res://AllTextures/ForLevels/Items/Key/Key_01.png" id="1"]
[ext_resource type="Script" path="res://ScenesANDScripts/ForLevels/Items/Key/Key.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://cecul0now34ib" path="res://MusicANDSounds/Sounds/Objects/Key.mp3" id="3_b5gr3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(79, 40)

[node name="Key" type="Node2D"]
script = ExtResource("2")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1")

[node name="AreaPickUP" type="Area2D" parent="."]

[node name="CollisionPickUP" type="CollisionShape2D" parent="AreaPickUP"]
position = Vector2(0.5, 0)
shape = SubResource("1")

[node name="PickUP" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_b5gr3")

[node name="VisibleOnScreenEnabler" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0.499997, 9.53674e-07)
scale = Vector2(3.95, 2)

[connection signal="body_entered" from="AreaPickUP" to="." method="_on_area_pick_up_body_entered"]
[connection signal="finished" from="PickUP" to="." method="_on_pick_up_finished"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler" to="." method="_on_visible_on_screen_enabler_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler" to="." method="_on_visible_on_screen_enabler_screen_exited"]
